# send-email-reactpy

./: README.md  pyproject.toml
backend/src/: app.py  constants.py  mail.py  models.py  settings.py
frontend/src/: app.py
frontend/src/components/: __init__.py
frontend/src/components/Input/: PrimaryInput.py
frontend/src/components/Loading/: PrimaryLoading.py
frontend/src/components/Submit/: SubmitButton.py  submitMessage.py
frontend/src/hooks/: useIdentityMutation.py
frontend/src/models/: person_data.py
frontend/src/pages/: __init__.py  formPage.py  productDetails.py
frontend/src/static/: App.css  FormPage.css  ProductDetails.css  index.css  primary-input.css  primary-loading.css
