[tool.poetry]
name = "send-email-react"
version = "0.1.0"
description = ""
authors = ["RWallan <3am.richardwallan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
reactpy = "^1.0.2"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = {extras = ["email"], version = "^2.4.2"}
httpx = "^0.25.1"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
black = "^23.11.0"
isort = "^5.12.0"
ruff = "^0.1.5"
ipykernel = "^6.26.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
exclude = [".venv"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = "ruff . && black --check . --diff"
format = "black . && isort ."
frontend = "uvicorn src.app:app --reload --port 5000"
backend = "uvicorn src.app:app --reload --port 8000"
