[tool.poetry]
name = "send-email-react"
version = "0.1.0"
description = "Projeto full stack em Python utilizando ReactPy para a construção do frontend e FastAPI para a construção do backend. A aplicação envia para o e-mail cadastrado o Zen do Python."
license = "MIT"
authors = ["Richard Wallan <3am.richardwallan@gmail.com>"]
readme = "README.md"
classifiers = [
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: Python :: 3.11",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
"Documentação" = "https://github.com/RWallan/send-email-reactpy/blob/main/README.md"
"Código Fonte" = "https://github.com/RWallan/send-email-reactpy"
"Bug Tracker" = "https://github.com/RWallan/send-email-reactpy/issues"


[tool.poetry.dependencies]
python = "3.11.*"
reactpy = "^1.0.2"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = {extras = ["email"], version = "^2.4.2"}
httpx = "^0.25.1"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
black = "^23.11.0"
isort = "^5.12.0"
ruff = "^0.1.5"
ipykernel = "^6.26.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
exclude = [".venv"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = "ruff . && black --check . --diff"
format = "black . && isort ."
frontend = "uvicorn src.app:app --reload --port 5000"
backend = "uvicorn src.app:app --reload --port 8000"
